fix carousel cards not centered
There was weird ghost space of around 16px between the right of a
carousel card and the right padding of its parent, regardless of window
size. This compensates for that and makes sure that carousel cards are
no longer 8px too far to the left as they were before

--- a/app/main/work/carousel.sass
+++ b/app/main/work/carousel.sass
@@ -20,6 +20,7 @@
   min-height: 22.5vw
   max-height: 22.5vw
   padding: .75vw
+  margin-right: -16px
   padding-bottom: 2vw
   background: transparentize($white, .85)
   box-shadow: 0 .4vw 2vw -.2vw transparentize($black, .5)
